# playwright_pet_project

./: README.md  pyproject.toml  pytest.ini
rutube/methods/: methods.py  selector_site.py
rutube/test-rutube/: test.py
