[project]
name = "playwright-pet-project"
version = "0.1.0"
description = ""
authors = [
    {name = "MozzhukhinRA",email = "roma.moz@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "pytest-playwright (>=0.7.2,<0.8.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "getenv (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
